[gd_scene load_steps=4 format=3 uid="uid://cokt0ly301hkp"]

[ext_resource type="Texture2D" uid="uid://dv2psjtllpucq" path="res://Assets/StartMenu.png" id="1_juhg0"]
[ext_resource type="Script" uid="uid://dh4ks0r1g3e6s" path="res://Scripts/start_menu.gd" id="1_m6uer"]
[ext_resource type="PackedScene" uid="uid://hoorcejsr43n" path="res://Scenes/audio_manager.tscn" id="3_m6uer"]

[node name="StartMenu" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_m6uer")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 1152.0
offset_bottom = 649.0
texture = ExtResource("1_juhg0")
expand_mode = 3

[node name="Start" type="Button" parent="."]
layout_mode = 0
offset_left = 514.0
offset_top = 487.0
offset_right = 855.0
offset_bottom = 560.0
theme_override_font_sizes/font_size = 48
text = "Start"

[node name="AudioManager" parent="." instance=ExtResource("3_m6uer")]

[node name="BlackScreen" type="ColorRect" parent="."]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 1111.0
offset_bottom = 607.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 1)

[connection signal="pressed" from="Start" to="." method="_on_start_button_pressed"]
